Registro y servicio agregados correctamente

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
    <!-- Bootstrap CSS CDN -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+
 </head>
 <body>
   <app-root></app-root>
 </body>
 <!-- Font Awesome JS -->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </html>
